# wb_judgement_day

./: .gitignore  README.md  extract_data.py  main.py  open_router_get_limit.js  package-lock.json  pyproject.toml  results.json
data/: hotpotqa_30.json  triviaqa_30.json  truthfulqa_30.json
results/: kappa_results.json  results.json
src/: main.py
