[tool.poetry]
name = "wb-llm-judge-09202024"
version = "0.1.0"
description = ""
authors = ["Faris <frs@hbb.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.47.0"
transformers = "^4.44.2"
torch = "^2.4.1"
python-dotenv = "^1.0.1"
black = "^24.8.0"
sentencepiece = "^0.2.0"
huggingface-hub = "^0.25.0"
weave = "^0.51.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
